# myproject1

./: CHANGES.md  CITATION  LICENSE  README.md  environment.yml  pyproject.toml  setup.cfg  unzip.py
bld/: clean_filtered_data.csv  survey_data.csv
paper/: climate_shocks.tex  refs.bib  task_paper.py
src/climate_shocks/: __init__.py  _version.py
src/climate_shocks/analysis/: __init__.py  model.py  task_analysis.py
src/climate_shocks/data_management/: __init__.py  clean_data.py  task_data_management.py
src/climate_shocks/final/: Plot3.py  age_distribution.py  merged.py  plot1.py  plot2.py  plot4.py  plot5.py  task_final.py
tests/: answers.md
tests/analysis/: test_model.py  test_plots.py
tests/data_management/: clean_data.py  data_fixture.csv  data_info_fixture.yaml  test_clean_data.py
