[metadata]
name = climate_shocks
description = Climate Shocks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sushmitasaha99/climate_shocks
author = Sushmita Saha
author_email = sushmitasaha006@gmail.com
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/sushmitasaha99/climate_shocks
    Documentation = https://github.com/sushmitasaha99/climate_shocks
    Github = https://github.com/sushmitasaha99/climate_shocks
    Tracker = https://github.com/sushmitasaha99/climate_shocks/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.11
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/climate_shocks/_version.py
